# F1sh-Camera-RX

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  meson.build  native-file.ini  native-file.ini.sample  qml.qrc  run-dev.cmd  run-portable.cmd
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: commit-check.yml
docs/: MESON-PACKAGING.md  PACKAGING-QUICKREF.md  PACKAGING.md
qml/: AGENTS.md  main.qml
qml/content/: CameraDisplay.qml  Log.qml  Screen01.ui.qml  Settings.qml  Start.qml  Wifi_pass.ui.qml  qmldir
scripts/macos/: package-portable.zsh
scripts/windows/: AGENTS.md  build-installer-meson.ps1  build-installer.ps1  build-portable-meson.ps1  f1sh-camera-rx-installer.iss  meson-post-install.py  package-msys2-portable.ps1  package-portable.ps1
src/: AGENTS.md  configmanager.cpp  configmanager.h  f1sh_camera_rx.h  grpcmanager.cpp  grpcmanager.h  http_client.c  http_server.c  logmanager.cpp  logmanager.h  main.c  main_qml.cpp  mainwindow.cpp  mainwindow.h  mdnsmanager.cpp  mdnsmanager.h  serial_probe.c  serial_service.c  serial_service.h  serialportmanager.cpp  serialportmanager.h  stream.c  streammanager.cpp  streammanager.h  ui.c  ui_configuration.c  ui_log.c  ui_login.c  ui_main.c  ui_rotate.c  ui_wifi.c  wifi_info.c  wifimanager.cpp  wifimanager.h
ui/: mainwindow.ui
ui/UntitledProject/: UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  UntitledProject.qmlproject.qtds.d743cfb  UntitledProject.qrc
ui/UntitledProject/UntitledProjectContent/: App.qml  CMakeLists.txt  CameraDisplay.qml  Screen01.ui.qml  Settings.qml  Start.qml  Wifi_pass.ui.qml
